--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -1,7 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap&family=Source+Sans+Pro:wght@300;500;700;900&display=swap');
 
+html, *, body {
+  margin: 0; 
+  padding: 0; 
+  box-sizing: border-box;
+}
+
 html, 
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
+}
+
+body {
+  box-sizing: border-box; 
+  position: relative; 
+  min-height: 100vh;
+  height: 100vh;
+  max-width: 100vw;
+  font-weight: 30;
+  overflow-x: hidden;
+}
+
+h1, h2 {
+  line-height: 1.125;
+}
+
+p, div, span, textarea {
+  font-family: "source sans pro", sans-serif;
 }
