--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap&family=Source+Sans+Pro:wght@300;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap&family=Source+Sans+Pro:wght@300;500;700;900&display=swap');
 
 html, *, body {
   margin: 0; 
@@ -26,6 +26,7 @@ h1, h2 {
   line-height: 1.125;
 }
 
-p, div, span, textarea {
+p, div, span, textarea, a {
   font-family: "source sans pro", sans-serif;
+  font-weight: 400;
 }
