--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap&family=Source+Sans+Pro:wght@300;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;600&display=swap&family=Source+Sans+Pro:wght@300;500;700;900&display=swap');
 
 html, *, body {
   margin: 0; 
@@ -8,7 +9,7 @@ html, *, body {
 
 html, 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 500;
 }
 
@@ -22,11 +23,12 @@ body {
   overflow-x: hidden;
 }
 
-h1, h2 {
+h1, h2, h3, h4, h5, h6 {
   line-height: 1.125;
+  font-family: 'Montserrat', sans-serif;
 }
 
 p, div, span, textarea, a {
-  font-family: "source sans pro", sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
 }
