--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -32,3 +32,9 @@ p, div, span, textarea, a {
   font-family: "Lato", sans-serif;
   font-weight: 400;
 }
+
+#__next {
+  min-height: 100vh;
+  height: 100%; 
+  position: relative;
+}
