--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -51,6 +51,7 @@ p, div, span, textarea, a {
   cursor:pointer;
   transition:800ms ease all;
   outline:none;
+  border-radius: 4px;
 }
 .fade-button:hover{
   background:#fff;
