--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -11,16 +11,17 @@ html,
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 500;
+  min-height: 100%;
 }
 
 body {
   box-sizing: border-box; 
   position: relative; 
-  min-height: 100vh;
-  height: 100vh;
   max-width: 100vw;
-  font-weight: 30;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 h1, h2, h3, h4, h5, h6 {
