--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
 }
 
-p, div, span, textarea, a {
+p, div, span, textarea, input, a {
   font-family: "Lato", sans-serif;
   font-weight: 400;
 }
