--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap&family=Source+Sans+Pro:wght@300;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;600&display=swap&family=Source+Sans+Pro:wght@300;500;700;900&display=swap');
 
-html, *, body {
-  margin: 0; 
-  padding: 0; 
+html,
+*,
+body {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-html, 
+html,
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 500;
@@ -15,8 +17,8 @@ body {
 }
 
 body {
-  box-sizing: border-box; 
-  position: relative; 
+  box-sizing: border-box;
+  position: relative;
   max-width: 100vw;
   overflow-x: hidden;
   display: flex;
@@ -24,81 +26,93 @@ body {
   min-height: 100vh;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   line-height: 1.125;
   font-family: 'Montserrat', sans-serif;
 }
 
-p, div, span, textarea, input, a {
-  font-family: "Lato", sans-serif;
+p,
+div,
+span,
+textarea,
+input,
+a {
+  font-family: 'Lato', sans-serif;
   font-weight: 400;
 }
 
 #__next {
   min-height: 100vh;
-  height: 100%; 
+  height: 100%;
   position: relative;
 }
 
 /* https://codepen.io/onediv/pen/jEmjap */
-.fade-button{
-  background:#1AAB8A;
-  color:#fff;
-  border:none;
-  position:relative;
-  height:60px;
-  font-size:1.6em;
-  padding:0 2em;
-  cursor:pointer;
+.fade-button {
+  background: #1aab8a;
+  color: #fff;
+  border: none;
+  position: relative;
+  height: 60px;
+  font-size: 1.6em;
+  padding: 0 2em;
+  cursor: pointer;
   transition: 400ms ease all;
-  outline:none;
+  outline: none;
   border-radius: 4px;
 }
-.fade-button:hover{
-  background:#fff;
-  color:#1AAB8A;
+.fade-button:hover {
+  background: #fff;
+  color: #1aab8a;
 }
-.fade-button:before,.fade-button:after{
-  content:'';
-  position:absolute;
-  top:0;
-  right:0;
-  height:2px;
-  width:0;
-  background: #1AAB8A;
+.fade-button:before,
+.fade-button:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 2px;
+  width: 0;
+  background: #1aab8a;
   transition: 200ms ease all;
 }
-.fade-button:after{
-  right:inherit;
-  top:inherit;
-  left:0;
-  bottom:0;
+.fade-button:after {
+  right: inherit;
+  top: inherit;
+  left: 0;
+  bottom: 0;
 }
-.fade-button:hover:before,.fade-button:hover:after{
-  width:100%;
-  transition:800ms ease all;
+.fade-button:hover:before,
+.fade-button:hover:after {
+  width: 100%;
+  transition: 800ms ease all;
 }
 
 .ripples {
-  background-color: #000; 
+  background-color: #000;
   transform: translate(-50%, -50%);
   pointer-events: none;
-  min-width: 100px; 
-  min-height: 100px; 
+  min-width: 100px;
+  min-height: 100px;
   border-radius: 50%;
   opacity: 0.5;
-  animation: animate 1s linear infinite; 
+  animation: animate 1s linear infinite;
 }
 
 @keyframes animate {
   0% {
-    min-width: 0px; 
-    min-height: 0px; 
+    min-width: 0px;
+    min-height: 0px;
     opacity: 0.5;
   }
   100% {
-    min-width: 500px; 
-    min-height: 500px; 
+    min-width: 500px;
+    min-height: 500px;
     opacity: 0;
   }
 }
